add apache-common dependencies to read byte array